sass/partials/_code.scss
code {
  @extend .fg-green;
  span {
    display: block;
    white-space: pre-wrap;
  }
  span.output {
    @extend .fg-blue;
  }
  span.hint {
    @extend .fg-yellow;
  }
}

code.block {
  display: block;
  white-space: pre;
}

